--- a/style/responsive.css
+++ b/style/responsive.css
@@ -74,5 +74,14 @@
     .img-grid-section{
         grid-template-columns: repeat(1, 1fr);
     }
+    .img-title h4{
+        font-size: 1.5rem;
+        font-weight: 800;
+    }
+
+    /*  */
+    .foot-grid{
+        grid-template-columns: repeat(1, 1fr);
+    }
     
 }
