--- a/style/style.css
+++ b/style/style.css
@@ -172,7 +172,7 @@ header{
     margin-bottom: 3rem;
 }
 .round-text{
-    width: 600px;
+    width: 60%;
     margin: 0 auto;
 }
 .cards{
@@ -284,24 +284,26 @@ select{
     color:rgba(255, 255, 255, 0.5);
 }
 .input-flex{
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 0.8rem;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+}
+.table-data{
+    width: 40%;
 }
 .calculate-text{
-    width: 60%;
+    width: 55%;
     margin-bottom: 3rem;
 }
 input, select{
-    width: 290px;
-    height: 40px;
+    padding: 8px 14px;
     background-color: rgba(255, 255, 255, 0.1);
     border: none;
     border-radius: 0.5rem;
 }
 #select-it{
-    width: 605px;
-}
+    grid-column: span 2;
+} 
 .bmi-title{
     font-size: 1.6rem;
     font-weight: 700;
@@ -318,7 +320,8 @@ input, select{
     margin: 0 auto;
 }
 .team{
-    margin: 4rem 0 3rem 0;
+    width: 60%;
+    margin: 4rem auto;
     text-align: center;
 }
 .team h1{
