--- a/style/responsive.css
+++ b/style/responsive.css
@@ -62,6 +62,24 @@
         object-fit: none;
         object-position: 68% 28% ;
     }
+    /* third section */
+    .exer-text{
+        width: 100%;
+    }
+    .exer-text h1{
+        font-size: 2rem;
+    }
+    
+    .exercise-top{
+    grid-template-columns:1fr;
+    gap: 10px;
+    margin-bottom: 10px;
+    }
+    .exercise-bottom{
+    grid-template-columns:1fr;
+    gap: 10px;
+    }
+
     /* challenge part */
     .videos-grid{
         grid-template-columns: repeat(1, 1fr);
